tests/ui/issues/issue-16149.stderr
error[E0530]: match bindings cannot shadow statics
  --> $DIR/issue-16149.rs:7:9
   |
LL |     static externalValue: isize;
   |     ---------------------------- the static `externalValue` is defined here
...
LL |         externalValue => true,
   |         ^^^^^^^^^^^^^ cannot be named the same as a static

error: aborting due to previous error

For more information about this error, try `rustc --explain E0530`.
